# job-hunting-ai-helper

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
data/examples/: resume-quant.typ  resume-tech.typ
data/prompts/: instruction_prompt.txt  score_instruction_prompt.txt  score_template_prompt.txt  template_prompt.txt
src/: llm_logger.py  loader.py  processor.py
src/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_compatible_provider.py  registry.py
tests/: conftest.py  test_app.py  test_llm_logger.py  test_loader.py  test_openai_compatible_provider.py  test_processor.py
